@startuml


class ConfigWindow {
  - createStyledTextField(String, String): TextField
  + show(Stage): void
  - openLaby(): String
  - createSection(String, Node): VBox
}
class FrameStats {
  - frameCount: long
  - text: ReadOnlyStringWrapper
  - meanFrameInterval: double
  + addFrame(long): void
  + textProperty(): ReadOnlyStringProperty
  + toString(): String
   meanFrameInterval: double
   text: String
   frameCount: long
}
class HelpWindow #00FF00{
  + show(): void
  - createTitleBar(String): HBox
  - createStyledCell(String, String): HBox
  - createTableTab(): VBox
  - loadImageFromResource(String): ImageView
  - createDefenseTableTab(): VBox
  - createTextTab(): VBox
  - createEnemyPanel(String, String, String, String): VBox
  - createImageTab(String): VBox
   helpWindow: HelpWindow
}
interface Jeu << interface >> {
  + etreFini(): boolean
  + update(double): void
  + init(Canvas): void
}
class MoteurJeu {
  ~ laby: ModeleLabyrinth
  - updateObjectiveLabel(): void
  + showEndGameScreen(Stage, Boolean): void
  + launch(Jeu): void
  + start(Stage): void
  + startJeu(Stage): void
  - startAnimation(Canvas, double): void
  - openHelpWindow(): void
  + restartApp(): void
   laby: ModeleLabyrinth
}
class SimpleMode {
  - simpleMode: boolean
  + disableSimpleMode(ViewLabyrinth, ModeleLabyrinth): void
  + addTextToImage(String, Image): Image
  + enableSimpleMode(ViewLabyrinth, ModeleLabyrinth): void
   simpleMode: boolean
}
class TimeManagement #00FF00{
  + pause(): void
  + modifySpeed(int, ToggleButton, ToggleButton): void
  + modifyFPS(double): void
   FPS: int
}

ConfigWindow   "1" *-> "moteur\n1" MoteurJeu      
MoteurJeu      "1" -> "configWindow\n1" ConfigWindow   
MoteurJeu       -->  ConfigWindow   : "«create»"
MoteurJeu      "1" *-> "jeu\n1" Jeu            
MoteurJeu       -->  SimpleMode     : "«create»"
MoteurJeu       -->  HelpWindow     : "«create»"
MoteurJeu       -->  TimeManagement : "«create»"
TimeManagement "1" *-> "frameStats\n1" FrameStats     
TimeManagement  -->  FrameStats     : "«create»"
TimeManagement "1" *-> "jeu\n1" Jeu            
@enduml
